# baxter_barcode_pickup

./: CMakeLists.txt  CMakeLists.txt~  README.md  ar_marker_pose.txt  ar_pose_marker.txt  baxter.sh  baxter_env_setup.sh  package.xml  rostopic_list.txt
baxter_barcode_pickup/: CMakeLists.txt  package.xml
baxter_barcode_pickup/src/: test.cpp
launch/: ar_track_node.launch  baxter_ar_code_track.launch  baxter_rviz_markers.launch  camera_view.rviz
src/: MoveArmToCubelet.cpp  MoveArmToCubelet_4.cpp  PlayBagVideo.cpp  ar_viz_servo.cpp  save  snippits.cpp  video_to_bag.cpp  viz_servo.cpp
