<?xml version="1.0"?>
<package>
  <name>baxter_barcode_pickup</name>
  <version>0.0.0</version>
  <description>The baxter barcoded test tube manipulation package</description>

  <maintainer email="peter.jeffris@colorado.edu">Peter</maintainer>
  <maintainer email="derek.gann@colorado.edu">Derek</maintainer>
  <maintainer email="clark.matthew8@gmail.com">Matt</maintainer>
  <maintainer email="howead@colorado.edu">Andrew</maintainer>

  <license>LGPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <export>
  </export>
</package>
